<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gradient6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="45dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvGameID"
            android:textColor="@color/colorTurquoise0"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center" />

        <Space
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLastStatus"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/tvLastStatus"
            android:textColor="@color/colorTurquoise0" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorLima"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/tvStatus" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tvGameName"
            android:textColor="@color/colorTurquoise0" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvName"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayer1Name"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tvPlayer1Name"
            android:textColor="@color/colorTurquoise0" />

        <TextView
            android:id="@+id/tvPlayerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPlayerOneName"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayerOnePieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPlayerOnePieces"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayerOneStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPlayerOneStatus"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayer2Name"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tvPlayer2Name"
            android:textColor="@color/colorTurquoise0" />

        <TextView
            android:id="@+id/tvPlayerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPlayerTwoName"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayerTwoPieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPlayerTwoPieces"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPlayerTwoStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPlayerTwoStatus"
            android:gravity="start"
            android:fontFamily="@font/roboto_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvGameMode"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tvGameMode"
            android:textColor="@color/colorTurquoise0" />


        <TextView
            android:id="@+id/tvMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMode"
            android:gravity="start"
            android:textColor="@color/colorLima"
            android:fontFamily="@font/roboto_bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDifficulty"
            android:gravity="start"
            android:fontFamily="@font/roboto_thin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>