<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_acc"
    tools:context=".View_BluetoothDevice">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etBluetoothDevice"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSlave"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="210dp"
        android:backgroundTint="#ffffff"
        android:cursorVisible="false"
        android:editable="false"
        android:enabled="false"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:hint="@string/etBluetoothDevice"
        android:lineHeight="0dp"
        android:singleLine="true"
        android:textSize="36sp"
        android:textColorHint="@color/colorTurquoise0" />

    <Button
        android:id="@+id/btnMaster"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:background="@drawable/gradient4"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/btnMaster"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnSlave"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/btnMaster"
        android:layout_marginTop="60dp"
        android:text="@string/btnSlave"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="@font/roboto_thin"
        android:background="@drawable/gradient4"/>

</RelativeLayout>